2000-11-17  Hugo Tyson  <hmt@redhat.com>

	* src/mibgroup/mibII/dot3.c (var_dot3StatsTable): 
	* src/mibgroup/mibII/interfaces.c (var_ifTable): Use the
	last component of the OID to select the matching interface rather
	than merely counting through them.  Thus this MIB matches eg. the
	IP MIB in terms of ip.ipAddrTable.ipAddrEntry.ipAdEntIfIndex.
	[CASE 104939 "snmp interface and IP group don't correspond"]

2000-08-31  Hugo Tyson  <hmt@cygnus.co.uk>

	* tests/snmpping.c (net_test): Add use of network realtime test
	harness - if available.  One example is provided for the EBSA285
	in "devs/eth/arm/ebsa285/VERSION/tests/test_net_realtime.h"

2000-08-25  Hugo Tyson  <hmt@cygnus.co.uk>

	* src/mibgroup/mibII/dot3.c (var_dot3StatsTable): A little further
	diddling; have a bool to say whether the dot3 info is filled in.

2000-08-24  Hugo Tyson  <hmt@cygnus.co.uk>

	* src/mibgroup/mibII/dot3.c (var_dot3StatsTable):
	* src/mibgroup/mibII/interfaces.c (var_ifTable): Use new ioctl()
	interface to get information out of ethernet devices.  If the
	ioctl call is not supported, we just get default values.

2000-08-16  Hugo Tyson  <hmt@cygnus.co.uk>

	* src/snmpd.c (snmpd): Remove call to
	init_all_network_interfaces(); it's a bad idea for the situations
	when initialization has been done externally to our helper
	functions.  This adds the constraint that you must initialize the
	network interfaces first, by whatever means.  Starting snmpd
	before the network is up may cause confusion.
	[CASE 104330]

	Also tidied some warnings.

2000-07-25  Hugo Tyson  <hmt@cygnus.co.uk>

	* tests/snmpping.c (net_test): Make it ping the loopback
	interfaces so as to do some valid testing in the absence of any
	real interfaces on the platform.  Also make it run less time or no
	doubt the farm will report many non-failures.

2000-07-13  Hugo Tyson  <hmt@cygnus.co.uk>

	* tests/snmpping.c: Up the stack size to cope with full DHCP
	initialization in init_all_network_interfaces().
